sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: not enough arguments for method plusPetitQue: (x$1: Int, x$2: Int)Boolean.
Unspecified value parameters x$1, x$2.
    while(!plusPetitQue() && n > 0 ){
                       ^