sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  var v=0
  var n= getNombreValeurs()-1
  for (i<-1 to n){
    v=getValeur(i)
    while(!plusPetitQue() && n > 0 ){
      copie(n,n+1)
      n=n-1
    }
   setValeur(n,v) 
  }
}